traversal.snake.Snake.scala.error
Compilation error:
Snake:38: error: not found: value fini
  while(fini == false){
        ^